# DCAS-PolicyEngine

./: .gitignore  CMakeLists.txt  README.md
DOCS/: DCAS_INTEGRATION_TEST_REPORT.md  DCAS_LKAS_Integration_Plan.md  DCAS_LOW_LEVEL_FFI_RT_PLAN.md  DCAS_TEST_SCENARIOS.md  IMPLEMENTATION_SKELETON_2026-04-23.md  LKAS_DCAS_ACTUATOR_CODE_WALKTHROUGH.md  control-policy-Baseline.md  dcas_lkas_rt_integration_direction.md  lkas_vehicle_viewer_flow.md  state-machine-Baseline.md
DOCS/Low_Level/: BASELINE_SYSTEM_REPORT.md  DCAS_LOW_LEVEL_FFI_RT_PLAN.md  PHASE2_RT_RESULTS.md  RT_LATENCY_RESULTS.md
include/dcas_policy_engine/: perception_adapter.hpp  threshold_scheduler.hpp  types.hpp
src/: dcas_rt_bridge.cpp  dcas_viewer.html  dcas_web_viewer.py  main.cpp  perception_feeder.py  rt_periodic_probe.cpp  step_b.cpp  step_c.cpp
tests/: test_policy.cpp
tools/ffi_load_runner/: apply_isolation.sh  case_b.sh  case_c.sh  case_d.sh  gpu_yolo_stress.py
